# uw-husky-directory

./: .gitignore  8cf0d8c2-3eef-4862-86bc-697406fa4309  Dockerfile  LICENSE  README.md  d9975ab5-cf56-48c2-8ff0-1320a749edff  fingerprints.yaml  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: uw-issue-template.md
.github/actions/calculate-base-fingerprint/: action.yml
.github/actions/configure-docker/: action.yml
.github/scripts/: README.md  build-and-push.sh  gcr-login.sh  install-build-scripts.sh  promote.sh  pull-or-build-base.sh  set-post-push-workflow-vars.sh  set-workflow-vars.sh
.github/steps/: README.md
.github/steps/create-release/: is-release-required.sh  push-release-image.sh
.github/steps/deploy/: canvas.json  configure-canvas.sh  deploy.sh  get_slack_notification.sh
.github/steps/pull-request/: create-pr-tag.sh
.github/steps/scheduled-maintenance/: configure-environment.sh  context-vars.src.sh  (+5 more)
.github/workflows/: README.md  create-release.yml  deploy-from-ui.yml  deploy.yml  post-push.yml  pull-request.yml  run-selenium-tests.yml  scheduled-maintenance.yml
docker/: deployment.dockerfile  development-server  development-server.dockerfile  docker-compose.app-with-redis.yaml  docker-compose.app.image-override.yml  docker-compose.app.yaml  docker-compose.selenium.yml  husky-directory-base.dockerfile  husky-directory.dockerfile  poetry-base  poetry-base.dockerfile  xmlsec-base.dockerfile
docker/prometheus/: prometheus.yml
docs/: commits.md  deployment.md  docker.md  jinja-templates.md  logging.md  manual-deployments.md  metrics.md  poetry.md  pws.md  pydantic.md  release-process.md  running-the-app.md  tox.md
husky_directory/: app.py  app_config.py  gunicorn.conf.py  logging.py  util.py
husky_directory/blueprints/: app.py  metrics.py  saml.py  search.py
husky_directory/models/: base.py  common.py  enum.py  pws.py  search.py  transforms.py  vcard.py
husky_directory/services/: auth.py  name_analyzer.py  object_store.py  pws.py  query_generator.py  query_synchronizer.py  reducer.py  search.py  translator.py  vcard.py
husky_directory/settings/: base.dotenv  compose-with-redis.dotenv  logging.yml
husky_directory/templates/: base.html  dynamic_search_options.html  error_display.html  footer.html  full_result.html  full_results.html  header.html  index.html  index_test.html  layout.html  layout_old.html  links.html  result_count.html  results.html  search.html  search_attribute_selection.html  search_options.html  student.html  summary_results.html  summary_results_table.html  vcard.vcf.jinja2
scripts/: bootstrap-dev-local.sh  build-app.sh  build-base-images.sh  build-layers.sh  build.sh  deploy.sh  get-deployed-version.sh  get-snapshot-fingerprint.sh  globals.sh  install-build-scripts.sh  pre-push.sh  run-development-server.sh  run-image-tests.sh  run-selenium-tests.sh  search-image-tags.sh  update-dependency-image.sh  validate-development-image.sh
selenium-tests/: conftest.py  test_husky_directory.py
tests/: conftest.py  test_app.py  test_app_config.py  test_logging.py  test_stuff.py  test_util.py
tests/blueprints/: test_metrics_blueprint.py  test_saml_blueprint.py  test_search_blueprint.py
tests/data/: listing.json  testconfig.yml
tests/models/: test_base_models.py  test_common_models.py  test_pws_models.py  test_search_models.py  test_vcard_models.py
tests/services/: test_auth_service.py  test_object_store.py  test_pws.py  test_query_generator.py  test_query_synchronizer.py  test_reducer.py  test_search.py  test_translator.py  test_vcard.py
(+13 files in other folders)
