[tool.poetry]
name = "uw-husky-directory"
version = "2.4.3"
description = "An updated version of the UW Directory"
authors = ["Thomas Thorogood <goodtom@uw.edu>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.11"


# Flask 2.2.0 broke our builds; there were several dependencies
# that broke, which means Flask broke the semver contract.
# Flask will remain pinned to <2.2 until someone else attempts
# to upgrade at a later Flask revision in hopes they
# straightened out their issues
Flask = ">=2.1,<2.2"
injector = "^0.19.0"
Flask-Injector = "^0.13.0"
pydantic = {extras = ["email", "dotenv"], version = "^1.8.1"}
inflection = "^0.5.1"
gunicorn = {extras = ["gevent"], version = "^20.0.4"}
PyYAML = "^6"
requests = "^2.25.1"
devtools = "^0.8.0"
python-dotenv = "^0.19.0"
uw-saml = {version = "^1.1.0"}
Flask-Session = "^0.3.2"
redis = "^4.1.0"
pytz = "^2022.1"
prometheus-flask-exporter = "^0.20"
Flask-HTTPAuth = "^4.4.0"
python-Levenshtein = "^0.12.2"
uw-it-flask-gunicorn-json-logger = "^0.1.6"

[tool.poetry.dev-dependencies]
black = "^22.0"
pytest = "^7.1.1"
pytest-flask = "^1.1.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
coverage = "^6.2"
beautifulsoup4 = "^4.9.3"
uw-webdriver-recorder = "^5.0"
uw-it-build-fingerprinter = "^0.2.5"
tox = "^3.24.5"

#
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
